# primitive-backpack

./: CHANGELOG.md  LICENSE  backpack-primitive.cabal  primitive-backpack.cabal
app/: Main.hs
indef/: PrimMonad.hsig
io/: PrimIO.hs
readert/: PrimReaderT.hs
src/Control/Monad/: Primitive.hs
src/Data/Primitive/: Array.hs
st/: PrimST.hs
stlazy/: PrimSTLazy.hs
test/: Test.hs
trans/: PrimTrans.hs  Trans.hsig
trans-impl/: TransAccumT.hs  TransContT.hs  TransErrorT.hs  TransExceptT.hs  TransIdentityT.hs  TransListT.hs  TransMaybeT.hs  TransRWSTCPS.hs  TransRWSTLazy.hs  TransRWSTStrict.hs  TransReaderT.hs  TransSelectT.hs  TransStateTLazy.hs  TransStateTStrict.hs  TransWriterTCPS.hs  TransWriterTLazy.hs  TransWriterTStrict.hs
